--- a/GINtool.csproj
+++ b/GINtool.csproj
@@ -123,9 +123,6 @@
   -->
   <ItemGroup>
     <Reference Include="Accessibility" />
-    <Reference Include="FastMember, Version=1.5.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\FastMember.1.5.0\lib\net461\FastMember.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -182,6 +179,7 @@
     can be found.
   -->
   <ItemGroup>
+    <Compile Include="BsuRegulons.cs" />
     <Compile Include="dlgUpDown.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -216,7 +214,6 @@
     </Compile>
     <None Include="app.config" />
     <None Include="GINtool_TemporaryKey.pfx" />
-    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
