with updated dialog

--- a/app.config
+++ b/app.config
@@ -22,6 +22,9 @@
             <setting name="referenceDIR" serializeAs="String">
                 <value>mode</value>
             </setting>
+            <setting name="fcBoundaries" serializeAs="String">
+                <value />
+            </setting>
         </GINtool.Properties.Settings>
     </userSettings>
 </configuration>
