--- a/GINtool.csproj
+++ b/GINtool.csproj
@@ -180,6 +180,12 @@
   -->
   <ItemGroup>
     <Compile Include="BsuRegulons.cs" />
+    <Compile Include="dlgBoundaries.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="dlgBoundaries.Designer.cs">
+      <DependentUpon>dlgBoundaries.cs</DependentUpon>
+    </Compile>
     <Compile Include="dlgUpDown.cs">
       <SubType>Form</SubType>
     </Compile>
