--- a/app.config
+++ b/app.config
@@ -31,6 +31,15 @@
             <setting name="fcHIGH" serializeAs="String">
                 <value>4</value>
             </setting>
+            <setting name="referenceGene" serializeAs="String">
+                <value>gene</value>
+            </setting>
+            <setting name="operonFile" serializeAs="String">
+                <value>not defined yet</value>
+            </setting>
+            <setting name="pvalue_cutoff" serializeAs="String">
+                <value>0.05</value>
+            </setting>
         </GINtool.Properties.Settings>
     </userSettings>
 </configuration>
