--- a/app.config
+++ b/app.config
@@ -40,6 +40,9 @@
             <setting name="pvalue_cutoff" serializeAs="String">
                 <value>0.05</value>
             </setting>
+            <setting name="use_pvalues" serializeAs="String">
+                <value>True</value>
+            </setting>
         </GINtool.Properties.Settings>
     </userSettings>
 </configuration>
