first beta release

--- a/app.config
+++ b/app.config
@@ -43,6 +43,9 @@
             <setting name="use_pvalues" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="operonSheet" serializeAs="String">
+                <value>Sheet1</value>
+            </setting>
         </GINtool.Properties.Settings>
     </userSettings>
 </configuration>
