--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -47,5 +47,8 @@
     <Setting Name="use_pvalues" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="operonSheet" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Sheet1</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
