--- a/app.config
+++ b/app.config
@@ -35,7 +35,7 @@
                 <value>gene</value>
             </setting>
             <setting name="operonFile" serializeAs="String">
-                <value>not defined yet</value>
+                <value />
             </setting>
             <setting name="pvalue_cutoff" serializeAs="String">
                 <value>0.05</value>
