--- a/app.config
+++ b/app.config
@@ -46,6 +46,15 @@
             <setting name="operonSheet" serializeAs="String">
                 <value>Sheet1</value>
             </setting>
+            <setting name="defaultPalette" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="compositPlot" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="qPlot" serializeAs="String">
+                <value>False</value>
+            </setting>
         </GINtool.Properties.Settings>
     </userSettings>
 </configuration>
