--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -50,5 +50,14 @@
     <Setting Name="operonSheet" Type="System.String" Scope="User">
       <Value Profile="(Default)">Sheet1</Value>
     </Setting>
+    <Setting Name="defaultPalette" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="compositPlot" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="qPlot" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
