--- a/app.config
+++ b/app.config
@@ -46,14 +46,14 @@
             <setting name="operonSheet" serializeAs="String">
                 <value>Sheet1</value>
             </setting>
-            <setting name="defaultPalette" serializeAs="String">
-                <value>0</value>
-            </setting>
-            <setting name="compositPlot" serializeAs="String">
+            <setting name="useFCorder" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="qPlot" serializeAs="String">
-                <value>False</value>
+            <setting name="categoryFile" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="catSheet" serializeAs="String">
+                <value>Sheet1</value>
             </setting>
         </GINtool.Properties.Settings>
     </userSettings>
