--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -50,14 +50,14 @@
     <Setting Name="operonSheet" Type="System.String" Scope="User">
       <Value Profile="(Default)">Sheet1</Value>
     </Setting>
-    <Setting Name="defaultPalette" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">0</Value>
-    </Setting>
-    <Setting Name="compositPlot" Type="System.Boolean" Scope="User">
+    <Setting Name="useFCorder" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
-    <Setting Name="qPlot" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
+    <Setting Name="categoryFile" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="catSheet" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Sheet1</Value>
     </Setting>
   </Settings>
 </SettingsFile>
