--- a/app.config
+++ b/app.config
@@ -46,7 +46,7 @@
             <setting name="operonSheet" serializeAs="String">
                 <value>Sheet1</value>
             </setting>
-            <setting name="useFCorder" serializeAs="String">
+            <setting name="sortAscending" serializeAs="String">
                 <value>False</value>
             </setting>
             <setting name="categoryFile" serializeAs="String">
@@ -54,6 +54,33 @@
             </setting>
             <setting name="catSheet" serializeAs="String">
                 <value>Sheet1</value>
+            </setting>
+            <setting name="regPlot" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="tblMap" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="tblCombine" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="tblSummary" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="catPlot" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="distPlot" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="useCat" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="tblOperon" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="useSort" serializeAs="String">
+                <value>False</value>
             </setting>
         </GINtool.Properties.Settings>
     </userSettings>
