--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -50,7 +50,7 @@
     <Setting Name="operonSheet" Type="System.String" Scope="User">
       <Value Profile="(Default)">Sheet1</Value>
     </Setting>
-    <Setting Name="useFCorder" Type="System.Boolean" Scope="User">
+    <Setting Name="sortAscending" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="categoryFile" Type="System.String" Scope="User">
@@ -58,6 +58,33 @@
     </Setting>
     <Setting Name="catSheet" Type="System.String" Scope="User">
       <Value Profile="(Default)">Sheet1</Value>
+    </Setting>
+    <Setting Name="regPlot" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="tblMap" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="tblCombine" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="tblSummary" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="catPlot" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="distPlot" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="useCat" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="tblOperon" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="useSort" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
     </Setting>
   </Settings>
 </SettingsFile>
