--- a/GINtool.csproj
+++ b/GINtool.csproj
@@ -36,7 +36,7 @@
     <PublishUrl>publish\</PublishUrl>
     <InstallUrl />
     <TargetCulture>en</TargetCulture>
-    <ApplicationVersion>1.0.0.41</ApplicationVersion>
+    <ApplicationVersion>1.0.0.47</ApplicationVersion>
     <AutoIncrementApplicationRevision>true</AutoIncrementApplicationRevision>
     <UpdateEnabled>true</UpdateEnabled>
     <UpdateInterval>7</UpdateInterval>
@@ -189,6 +189,12 @@
   <ItemGroup>
     <Compile Include="BsuRegulons.cs" />
     <Compile Include="ClassExtensions.cs" />
+    <Compile Include="dlgSelectData.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="dlgSelectData.Designer.cs">
+      <DependentUpon>dlgSelectData.cs</DependentUpon>
+    </Compile>
     <Compile Include="dlgTreeView.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -219,6 +225,9 @@
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
+    <EmbeddedResource Include="dlgSelectData.resx">
+      <DependentUpon>dlgSelectData.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="dlgTreeView.resx">
       <DependentUpon>dlgTreeView.cs</DependentUpon>
     </EmbeddedResource>
@@ -328,6 +337,7 @@
     <None Include="Resources\check1.png" />
     <None Include="Resources\clipboard.png" />
     <None Include="Resources\crop.png" />
+    <None Include="Resources\keyboard.png" />
     <Content Include="Resources\Resources.txt" />
   </ItemGroup>
   <PropertyGroup>
