--- a/GINtool.csproj
+++ b/GINtool.csproj
@@ -246,6 +246,7 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <None Include="app.config" />
+    <None Include="GINtool_3_TemporaryKey.pfx" />
     <None Include="GINtool_TemporaryKey.pfx" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -348,11 +349,10 @@
     <SignManifests>true</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>
-    </ManifestKeyFile>
+    <ManifestKeyFile>GINtool_3_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>2E0C32460E0EB71B6DD2BB9100D691EF69BB0D13</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>17441A4C837BB7D64DECF753FA5D25A814CE9BB6</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>
