--- a/app.config
+++ b/app.config
@@ -17,7 +17,7 @@
                 <value>locus_tag</value>
             </setting>
             <setting name="referenceRegulon" serializeAs="String">
-                <value>regulon</value>
+                <value>regulator</value>
             </setting>
             <setting name="referenceDIR" serializeAs="String">
                 <value>mode</value>
@@ -81,6 +81,30 @@
             </setting>
             <setting name="useSort" serializeAs="String">
                 <value>False</value>
+            </setting>
+            <setting name="genesMappingVisible" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="operonMappingVisible" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="genesFileName" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="genesSheetName" serializeAs="String">
+                <value>Sheet1</value>
+            </setting>
+            <setting name="genesBSUColumn" serializeAs="String">
+                <value>locus_tag</value>
+            </setting>
+            <setting name="genesNameColumn" serializeAs="String">
+                <value>gene</value>
+            </setting>
+            <setting name="genesFunctionColumn" serializeAs="String">
+                <value>function</value>
+            </setting>
+            <setting name="genesDescriptionColumn" serializeAs="String">
+                <value>description</value>
             </setting>
         </GINtool.Properties.Settings>
     </userSettings>
