--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -12,7 +12,7 @@
       <Value Profile="(Default)">locus_tag</Value>
     </Setting>
     <Setting Name="referenceRegulon" Type="System.String" Scope="User">
-      <Value Profile="(Default)">regulon</Value>
+      <Value Profile="(Default)">regulator</Value>
     </Setting>
     <Setting Name="referenceDIR" Type="System.String" Scope="User">
       <Value Profile="(Default)">mode</Value>
@@ -85,6 +85,30 @@
     </Setting>
     <Setting Name="useSort" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="genesMappingVisible" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="operonMappingVisible" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="genesFileName" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="genesSheetName" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Sheet1</Value>
+    </Setting>
+    <Setting Name="genesBSUColumn" Type="System.String" Scope="User">
+      <Value Profile="(Default)">locus_tag</Value>
+    </Setting>
+    <Setting Name="genesNameColumn" Type="System.String" Scope="User">
+      <Value Profile="(Default)">gene</Value>
+    </Setting>
+    <Setting Name="genesFunctionColumn" Type="System.String" Scope="User">
+      <Value Profile="(Default)">function</Value>
+    </Setting>
+    <Setting Name="genesDescriptionColumn" Type="System.String" Scope="User">
+      <Value Profile="(Default)">description</Value>
     </Setting>
   </Settings>
 </SettingsFile>
