--- a/GINtool.csproj
+++ b/GINtool.csproj
@@ -191,7 +191,13 @@
   -->
   <ItemGroup>
     <Compile Include="BsuRegulons.cs" />
+    <Compile Include="CalcTables.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="ClassExtensions.cs" />
+    <Compile Include="CreatePlots.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="dlgSelectData.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -209,6 +215,12 @@
     </Compile>
     <Compile Include="dlgUpDown.Designer.cs">
       <DependentUpon>dlgUpDown.cs</DependentUpon>
+    </Compile>
+    <Compile Include="LoadDataFiles.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="OutputSheets.cs">
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="PlotRoutines.cs" />
     <Compile Include="ExcelUtils.cs" />
@@ -249,6 +261,7 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <None Include="app.config" />
+    <None Include="GINtool_1_TemporaryKey.pfx" />
     <None Include="GINtool_3_TemporaryKey.pfx" />
     <None Include="GINtool_4_TemporaryKey.pfx" />
     <None Include="GINtool_TemporaryKey.pfx" />
@@ -351,10 +364,10 @@
     <SignManifests>true</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>GINtool_4_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile>GINtool_1_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>7F070EF6AC36DFDDD9AFF2A3D715745CF0111340</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>CF7170495EAC9DA8F5533CD114BF4EE1B8FEF162</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>
