--- a/GINtool.csproj
+++ b/GINtool.csproj
@@ -262,6 +262,7 @@
     </EmbeddedResource>
     <None Include="app.config" />
     <None Include="GINtool_1_TemporaryKey.pfx" />
+    <None Include="GINtool_2_TemporaryKey.pfx" />
     <None Include="GINtool_3_TemporaryKey.pfx" />
     <None Include="GINtool_4_TemporaryKey.pfx" />
     <None Include="GINtool_TemporaryKey.pfx" />
@@ -364,10 +365,10 @@
     <SignManifests>true</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>GINtool_1_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile>GINtool_2_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>CF7170495EAC9DA8F5533CD114BF4EE1B8FEF162</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>24A69DAA120DA1CFEFE736B1E5712CFF090275F6</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>
