--- a/app.config
+++ b/app.config
@@ -109,6 +109,9 @@
             <setting name="catCatDescriptionColumn" serializeAs="String">
                 <value>description</value>
             </setting>
+            <setting name="use_foldchange" serializeAs="String">
+                <value>False</value>
+            </setting>
         </GINtool.Properties.Settings>
     </userSettings>
 </configuration>
