--- a/app.config
+++ b/app.config
@@ -14,13 +14,13 @@
                 <value>Sheet1</value>
             </setting>
             <setting name="referenceBSU" serializeAs="String">
-                <value>locus_tag</value>
+                <value />
             </setting>
             <setting name="referenceRegulon" serializeAs="String">
-                <value>regulator</value>
+                <value />
             </setting>
             <setting name="referenceDIR" serializeAs="String">
-                <value>mode</value>
+                <value />
             </setting>
             <setting name="fcLOW" serializeAs="String">
                 <value>1.5</value>
@@ -32,7 +32,7 @@
                 <value>4</value>
             </setting>
             <setting name="referenceGene" serializeAs="String">
-                <value>gene</value>
+                <value />
             </setting>
             <setting name="operonFile" serializeAs="String">
                 <value />
@@ -41,7 +41,7 @@
                 <value>0.05</value>
             </setting>
             <setting name="use_pvalues" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="operonSheet" serializeAs="String">
                 <value>Sheet1</value>
@@ -56,7 +56,7 @@
                 <value>Sheet1</value>
             </setting>
             <setting name="regPlot" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="tblMap" serializeAs="String">
                 <value>True</value>
@@ -68,10 +68,10 @@
                 <value>True</value>
             </setting>
             <setting name="catPlot" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="distPlot" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="useCat" serializeAs="String">
                 <value>False</value>
@@ -86,28 +86,28 @@
                 <value />
             </setting>
             <setting name="genesSheetName" serializeAs="String">
-                <value>Sheet1</value>
+                <value />
             </setting>
             <setting name="genesBSUColumn" serializeAs="String">
-                <value>locus_tag</value>
+                <value />
             </setting>
             <setting name="genesNameColumn" serializeAs="String">
-                <value>gene</value>
+                <value />
             </setting>
             <setting name="genesFunctionColumn" serializeAs="String">
-                <value>function</value>
+                <value />
             </setting>
             <setting name="genesDescriptionColumn" serializeAs="String">
-                <value>description</value>
+                <value />
             </setting>
             <setting name="catBSUColum" serializeAs="String">
-                <value>locus tag</value>
+                <value />
             </setting>
             <setting name="catCatIDColumn" serializeAs="String">
-                <value>category id</value>
+                <value />
             </setting>
             <setting name="catCatDescriptionColumn" serializeAs="String">
-                <value>description</value>
+                <value />
             </setting>
             <setting name="use_foldchange" serializeAs="String">
                 <value>False</value>
