--- a/app.config
+++ b/app.config
@@ -127,6 +127,12 @@
             <setting name="regInfoFunctionColumn" serializeAs="String">
                 <value />
             </setting>
+            <setting name="useOperons" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="useRegulons" serializeAs="String">
+                <value>False</value>
+            </setting>
         </GINtool.Properties.Settings>
     </userSettings>
 </configuration>
